--- a/src/ros_socket_adaptor/.vscode/settings.json
+++ b/src/ros_socket_adaptor/.vscode/settings.json
@@ -10,5 +10,9 @@
         "/home/sun/ccmslam_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages",
         "/usr/lib/python3.8"
-    ]
+    ],
+    "files.associations": {
+        "ostream": "cpp",
+        "iostream": "cpp"
+    }
 }
